# rowing-tracker

./: .env.example  .gitignore  2026-03-16-200202-whats-the-single-smartest-and-most-radically-inno.txt  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  analyticswarningsfix_be4c170b-0cba-47f8-a25c-c019b2ca41ad.spec.ts  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts
.claude/: settings.local.json
.github/: FUNDING.yml
docker/: init.sql
docs/: ADMIN_FEATURE.md  COMPLETE_DATABASE_MIGRATION.md  DATABASE_AUDIT.md  DATABASE_IMPLEMENTATION_PLAN.md  DATABASE_MIGRATION_FINAL_REPORT.md  DATABASE_MIGRATION_FINAL_SUMMARY.md  DATABASE_MIGRATION_SESSION_SUMMARY.md  DATABASE_SCHEMA.md  DATABASE_SYNC_COMPLETE_PLAN.md  DATABASE_SYNC_FINAL_STATUS.md  DATABASE_SYNC_IMPLEMENTATION.md  DATABASE_SYNC_QUICK_START.md  DATABASE_SYNC_STATUS.md  FIXES_TODO.md  IMPLEMENTATION_TODO.md  INTEGRATION_GUIDE.md  MEMORY_BLOB_MIGRATION_COMPLETE.md  MEMORY_BLOB_MIGRATION_GUIDE.md  MEMORY_MIGRATION_TESTING_GUIDE.md  MULTI_USER_IMPLEMENTATION_STATUS.md  PLAN_COMPLETE.md  README-REFACTOR-PLAN.md  REMAINING_LOCALSTORAGE_MIGRATION.md  SAAS_READINESS_PLAN.md  SETTINGS_INTEGRATION_COMPLETE.md  SETTINGS_MIGRATION_COMPLETE.md  SETTINGS_MIGRATION_PROGRESS.md  SETTINGS_TESTING_GUIDE.md  SIMPLIFIED_PLAN.md  TESTING_DATABASE_SYNC.md  achivement_generator.md  ai-features-todo.md  api-alignment-code-examples.md  (+23 more)
sidecar/: README.md  pyproject.toml
sidecar/src/rowing_tracker_sidecar/: __init__.py  cli.py  contract.py  server.py  sources.py
(+305 files in other folders)
