[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rowing-tracker-sidecar"
version = "0.1.0"
description = "Local FreeMoCap-compatible sidecar service for Rowing Tracker mocap capture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rowing Tracker" }]
dependencies = []

[project.optional-dependencies]
freemocap = [
  "freemocap>=1.8,<2",
  "numpy>=1.24",
]

[project.scripts]
rowing-tracker-sidecar = "rowing_tracker_sidecar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
